--- a/app/assets/stylesheets/_show.sass
+++ b/app/assets/stylesheets/_show.sass
@@ -3,10 +3,8 @@
 .pic-box-center
   margin-left: auto
   margin-right: auto
-  width: 933px
-  // padding-left: 1em
-  // padding-right: 1em
-  // max-width: 933px
+  max-width: 933px
+
 
 .pic-box
   max-width: 933px
@@ -101,6 +99,8 @@
   // mobile menu
 
 @media (max-width: 613px)
+  .pic-box-center
+    width: 100vw
   .pic-left, .pic-rigth
     width: 98vw
 
